--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -35,6 +35,27 @@ jobs:
             libssl-dev \
             libsqlite3-dev
 
-      - run: cargo build --workspace
-      - run: cargo build --bin kanidm --features idv-tui
-      - run: cargo test
+            - run: cargo build --workspace
+            - run: cargo build --bin kanidm --features idv-tui
+            - run: cargo test
+  run_release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: Setup sccache
+        uses: mozilla-actions/sccache-action@v0.0.3
+        with:
+          version: "v0.4.2"
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install -y \
+            libpam0g-dev \
+            libudev-dev \
+            libssl-dev \
+            libsqlite3-dev
+      - name: "Run the release build test script"
+        run: ./scripts/test_run_release_server.sh
