--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,7 +159,7 @@ reqwest = { version = "0.11.20", default-features = false, features = [
     "native-tls-alpn",
 ] }
 rpassword = "^7.2.0"
-rusqlite = "^0.28.0"
+rusqlite = { version = "^0.28.0", features = ["array", "bundled"] }
 
 scim_proto = "^0.2.1"
 sd-notify = "^0.4.1"
