minor changes to speed up WASM tests

--- a/.github/workflows/wasm_test.yml
+++ b/.github/workflows/wasm_test.yml
@@ -50,6 +50,6 @@ jobs:
       - name: "Run webdriver tests"
         run: |
           chromedriver &
-          cargo test -p kanidmd_testkit --features webdriver
+          cargo test -p kanidmd_testkit --features webdriver test_webdriver
         env:
           DISPLAY: ":99"
