--- a/libs/client/Cargo.toml
+++ b/libs/client/Cargo.toml
@@ -13,7 +13,9 @@ repository = { workspace = true }
 
 [dependencies]
 tracing = { workspace = true }
-reqwest = { workspace = true, default-features = false }
+reqwest = { workspace = true, default-features = false, features = [
+    "multipart",
+] }
 kanidm_proto = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
