--- a/Cargo.toml
+++ b/Cargo.toml
@@ -173,7 +173,8 @@ sketching = { path = "./libs/sketching" }
 smartstring = "^1.0.1"
 smolset = "^1.3.1"
 sshkeys = "^0.3.1"
-syn = { version = "2.0.37", features = ["full"] }
+syn = { version = "2.0.32", features = ["full"] }
+tempfile = "3.8.0"
 testkit-macros = { path = "./server/testkit-macros" }
 time = { version = "^0.3.21", features = ["formatting", "local-offset"] }
 
