--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -2,7 +2,6 @@
 name = "kanidmd_core"
 description = "Kanidm Server Core and Library"
 documentation = "https://docs.rs/kanidm/latest/kanidm/"
-autotests = false
 
 version = { workspace = true }
 authors = { workspace = true }
@@ -14,7 +13,7 @@ repository = { workspace = true }
 
 [dependencies]
 async-trait = { workspace = true }
-axum = { workspace=true }
+axum = { workspace = true }
 axum-auth = "0.4.0"
 axum-csp = { workspace = true }
 axum-macros = "0.3.8"
@@ -28,6 +27,7 @@ futures-util = { workspace = true }
 http = "0.2.9"
 hyper = { workspace = true }
 kanidm_proto = { workspace = true }
+kanidm_utils_users = { workspace = true }
 kanidmd_lib = { workspace = true }
 ldap3_proto = { workspace = true }
 libc = { workspace = true }
@@ -36,20 +36,29 @@ rand = { workspace = true }
 regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 sketching = { workspace = true }
-time = { workspace = true, features = ["serde", "std","local-offset"] }
+time = { workspace = true, features = ["serde", "std", "local-offset"] }
 tokio = { workspace = true, features = ["net", "sync", "io-util", "macros"] }
 tokio-openssl = { workspace = true }
 tokio-util = { workspace = true, features = ["codec"] }
-toml = {workspace = true}
+toml = { workspace = true }
 tower = { version = "0.4.13", features = ["tokio-stream", "tracing"] }
-tower-http = { version = "0.4.4", features = ["tokio", "tracing", "uuid", "compression-gzip", "compression-zstd", "trace", "fs"] }
+tower-http = { version = "0.4.4", features = [
+    "compression-gzip",
+    "compression-zstd",
+    "fs",
+    "tokio",
+    "trace",
+    "tracing",
+    "uuid",
+] }
 tracing = { workspace = true, features = ["attributes"] }
 tracing-subscriber = { workspace = true, features = ["time", "json"] }
 urlencoding = { workspace = true }
-kanidm_utils_users = { workspace = true }
-uuid = { workspace = true, features = ["serde", "v4" ] }
-serde_with = { workspace = true }
+tempfile = { workspace = true }
+uuid = { workspace = true, features = ["serde", "v4"] }
+
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
