--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -18,9 +18,11 @@ test = true
 doctest = false
 
 [features]
-default = []
+default = ["enumeration"] # TODO: disable this
 # Enables webdriver tests, you need to be running a webdriver server
 webdriver = ["fantoccini"]
+# Enables @yaleman's weird tests for mapping out the access landscape
+enumeration = []
 
 [dependencies]
 kanidm_client = { workspace = true }
