--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -14,7 +14,6 @@ repository = { workspace = true }
 [features]
 wasm = ["webauthn-rs-proto/wasm"]
 
-
 [dependencies]
 base32 = { workspace = true }
 base64urlsafedata = { workspace = true }
@@ -27,6 +26,6 @@ time = { workspace = true, features = ["serde", "std"] }
 tracing = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 urlencoding = { workspace = true }
+utoipa = { workspace = true }
 uuid = { workspace = true, features = ["serde"] }
 webauthn-rs-proto = { workspace = true }
-
