--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -26,7 +26,6 @@ filetime = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
 http = { workspace = true }
-
 hyper = { workspace = true }
 kanidm_proto = { workspace = true }
 kanidm_utils_users = { workspace = true }
@@ -63,6 +62,15 @@ urlencoding = { workspace = true }
 tempfile = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 uuid = { workspace = true, features = ["serde", "v4"] }
+utoipa = { workspace = true, features = [
+    "axum_extras",
+    "openapi_extensions",
+    "preserve_order",     #  Preserve order of properties when serializing the schema for a component.
+] }
+utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
+
+[dev-dependencies]
+walkdir = { workspace = true }
 
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
