--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -16,11 +16,9 @@ name = "kanidmd_testkit"
 path = "src/lib.rs"
 
 [features]
-default = ["enumeration"] # TODO: disable this
+default = []
 # Enables webdriver tests, you need to be running a webdriver server
 webdriver = ["fantoccini"]
-# Enables @yaleman's weird tests for mapping out the access landscape
-enumeration = []
 
 [dependencies]
 kanidm_client = { workspace = true }
