--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -18,11 +18,9 @@ test = true
 doctest = false
 
 [features]
-default = ["enumeration"] # TODO: disable this
+default = []
 # Enables webdriver tests, you need to be running a webdriver server
 webdriver = ["fantoccini"]
-# Enables @yaleman's weird tests for mapping out the access landscape
-enumeration = []
 
 [dependencies]
 kanidm_client = { workspace = true }
