--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,11 @@ members = [
     "unix_integration",
     "unix_integration/nss_kanidm",
     "unix_integration/pam_kanidm",
-    "server/web_ui",
+    # "server/web_ui",                # to be deprecated
     "server/web_ui/admin",
-    "server/web_ui/shared",
     "server/web_ui/login_flows",
+    "server/web_ui/user",
+    "server/web_ui/shared",
     "server/daemon",
     "server/lib",
     "server/lib-macros",
