--- a/Cargo.toml
+++ b/Cargo.toml
@@ -207,7 +207,8 @@ tss-esapi = "^7.4.0"
 url = "^2.4.1"
 urlencoding = "2.1.3"
 users = "^0.11.0"
-utoipa = "3.5.0"
+utoipa = "4.0.0"
+utoipa-swagger-ui = "4.0.0"
 uuid = "^1.4.1"
 
 wasm-bindgen = "^0.2.86"
