--- a/server/core/Cargo.toml
+++ b/server/core/Cargo.toml
@@ -67,7 +67,7 @@ utoipa = { workspace = true, features = [
     "openapi_extensions",
     "preserve_order",     #  Preserve order of properties when serializing the schema for a component.
 ] }
-utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
+utoipa-swagger-ui = { workspace = true, features = ["axum"] }
 
 [dev-dependencies]
 walkdir = { workspace = true }
