--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -28,7 +28,7 @@ harness = false
 [dependencies]
 base64 = { workspace = true }
 base64urlsafedata = { workspace = true }
-bitflags.workspace = true
+bitflags = { workspace = true }
 compact_jwt = { workspace = true, features = ["openssl", "hsm-crypto"] }
 concread = { workspace = true }
 dyn-clone = { workspace = true }
