--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,12 +111,13 @@ axum-csp = { version = "0.0.5" }
 base32 = "^0.4.0"
 base64 = "^0.21.7"
 base64urlsafedata = "0.1.3"
+bitflags = "^2.4.2"
 bytes = "^1.5.0"
 clap = { version = "^4.5.3", features = ["derive", "env"] }
 clap_complete = "^4.5.1"
 # Forced by saffron/cron
 chrono = "^0.4.35"
-compact_jwt = { version = "^0.3.5", default-features = false }
+compact_jwt = { version = "^0.4.0-dev", default-features = false }
 concread = "^0.5.0"
 cron = "0.12.1"
 crossbeam = "0.8.4"
