--- a/server/lib/Cargo.toml
+++ b/server/lib/Cargo.toml
@@ -28,6 +28,7 @@ harness = false
 [dependencies]
 base64 = { workspace = true }
 base64urlsafedata = { workspace = true }
+bitflags = { workspace = true }
 compact_jwt = { workspace = true, features = ["openssl", "hsm-crypto"] }
 concread = { workspace = true }
 dyn-clone = { workspace = true }
@@ -106,6 +107,8 @@ webauthn-authenticator-rs = { workspace = true }
 
 futures = { workspace = true }
 kanidmd_lib_macros = { workspace = true }
+
+compact_jwt = { workspace = true, features = ["openssl", "hsm-crypto", "unsafe_release_without_verify"] }
 
 [build-dependencies]
 hashbrown = { workspace = true }
