--- a/.github/workflows/rust_build.yml
+++ b/.github/workflows/rust_build.yml
@@ -83,4 +83,4 @@ jobs:
       - name: "Run the release build test script"
         env:
           BUILD_MODE: release
-        run: ./scripts/test_run_release_server.sh
+        run: ./scripts/test_run_release_server.sh || killall kanidmd
